kubernetes_file/stateful/meilisearch/service.yml
apiVersion: v1
kind: Service
metadata:
  namespace: stateful
  name: meilisearch
spec:
  selector:
    app: meilisearch
  ports:
  - protocol: TCP
    port: 7700
    targetPort: 7700
