kubernetes_file/stateful/meilisearch/virtual-service.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: meilisearch-virtual-service
  namespace: stateful
spec:
  hosts:
    - "*"
  gateways:
    - meilisearch-gateway
  tcp:
    - match:
        - port: 7700
      route:
        - destination:
            host: meilisearch
            port:
              number: 7700
